# sea-agent-sdk-py

./: LICENSE  Makefile  README.md  pyproject.toml
sea_agent_sdk/: __init__.py  client.py  config.py  errors.py  resources.py  stream.py  transport.py  types.py
skills/sea-agent-sdk-py/: SKILL.md
skills/sea-agent-sdk-py/agents/: openai.yaml
tests/: test_chat.py  test_config_client.py  test_hooks.py  test_transport.py
