[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sea-agent-sdk"
version = "0.1.0"
description = "Python SDK for SeaArt agent-gateway APIs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SeaArt" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
ws = ["websocket-client>=1.8"]

[project.urls]
Homepage = "https://github.com/SeaVerseAI/sea-agent-sdk-py"
Repository = "https://github.com/SeaVerseAI/sea-agent-sdk-py"

[tool.setuptools.packages.find]
include = ["sea_agent_sdk*"]
